tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__BasicCraftingMac-AAAAAAAAAAAAAAAAAAAASQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 73,
  "prerequisites": [
    67,
    948
  ],
  "properties": {
    "auto_claim": false,
    "desc": "All machines need a hull to keep their private parts together. Good news is: They are crafted in the same way for every tier, only the materials change.\n\n§3As noted on the tooltip, you can also use a machine hull to pass EU through, at 1A. This can be useful for a 1A diode on Thermos servers, splitting cables from 4A->1A or in a cleanroom later. You can also pass items or fluids through it.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lBasic Crafting: Machine Hulls",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    67,
    948
  ],
  "rewards": [],
  "tasks": []
}
