tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__BetterMakethatTw-fRHWhPgpRyyvSRZpL1Pkbw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 17881902050549425263,
  "prerequisites": [
    694
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You may need a second anvil! \n\nOne would have been for the Forge Hammer and another for general repairing or renaming!",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lBetter Make that Two!",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    694
  ],
  "rewards": [],
  "tasks": []
}
