tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__Books-AAAAAAAAAAAAAAAAAAAD8A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1008,
  "prerequisites": [
    54
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Books can be found easily enough in villages or in the roguelike dungeons surface brick house. I'm sure they have a recipe too.\n\nNow glue on the other hand...or should I say horse? Try and get a horse inside a smeltery and feed it hay to keep it alive.\n\nOr you can wait until after you go to the Nether and get some sulfur. Either way.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lBooks",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    54
  ],
  "rewards": [],
  "tasks": []
}
