tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__BowlFullofSpaghe-AAAAAAAAAAAAAAAAAAAGxw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1735,
  "prerequisites": [
    1205
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Or at least factories full of item pipes. You can take items out of one machine using a hopper pointing directly into your pipes, and from there deliver them to a second machine.\n\nLater on you can make better item pipes. Search for \"item pipe\" in NEI for options.\n\n[warn]You'll need a Steel Wrench to remove them. Don't place them down unless you're sure of the location until you have one.[/warn]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lBowl Full of Spaghetti",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1205
  ],
  "rewards": [],
  "tasks": []
}
